EPMEDUTOUR-10506[EPMEDUTOUR-11819]: Wave: Fix Contrast errors

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,8 +1,7 @@
 $systemFonts: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 $color-page-bg:      #fff;
-$color-btn-bg:       #4BA83B;
-$color-btn-bg-over:  #5cb94c;
 $color-text:         #55555C;
 $color-text-head:    #1E1F20;
+$color-green:        #1C800C;
 
